phase2_Dev/src/objects/Document__c.object
<CustomObject>
    <description>A custom object to be used for non-Salesforce reference documents.</description>
    <fields>
        <fullName>Approved_for_Future_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Future Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Status__c</fullName>
        <label>Attachment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attachment(s) Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Attachment</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Role</label>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>The file&apos;s content meta type.</description>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <formula>If(

OR(

AND(ISBLANK(Valid_From__c), ISBLANK(Valid_To__c)),


AND(OR(ISBLANK(Valid_From__c), Valid_From__c &lt;= Now()),
OR(ISBLANK(Valid_To__c), Valid_To__c &gt;= Now()))

),

true, 

false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Type</label>
        <referenceTo>Document_Type__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumenttypeNAme__c</fullName>
        <formula>Document_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocumenttypeNAme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_Note_For_Revision__c</fullName>
        <label>EEC Note For Revision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes relating to the document.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_File_Name__c</fullName>
        <label>Original File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Date__c</fullName>
        <label>Out of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>DateTime</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>Provider__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DOC- {0000000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Doc_Type_required_if_future_usage_set</fullName>
        <active>true</active>
        <description>If the future usage checkbox is selected then ensure a doc type is available.</description>
        <errorConditionFormula>AND( ISBLANK(Document_Type__c),  Approved_for_Future_Usage__c)</errorConditionFormula>
        <errorMessage>Document Type is required if document is approved for future usage.</errorMessage>
    </validationRules>
</CustomObject>